<resources>
    <string name="app_name">Bit_Time</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="caregiver_welcome_message">Stai accedendo alla sezione riservata</string>
    <string name="back_button_message">torna indietro</string>
    <string name="pin_input_hint_text">PIN</string>
    <string name="back_text">BACK</string>
    <string name="reset_button">RESET PIN</string>
    <string name="enter_text">Accedi</string>
    <string name="default_pin_text">default PIN 0000</string>
    <string name="togglevisibility">toggleVisibility</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="switch_mode">Prima volta qui? Registrati</string>
    <string name="account_e_statistiche"><![CDATA[Account & Statistiche]]></string>
    <string name="impostazioni_personalizzazione">Impostazioni Personalizzazione</string>
    <string name="nuova_attivit">Gestione Tasks e Attivita</string>
    <string name="minigiochi">MINIGIOCHI</string>
    <string name="quickstart_menu">Menù Accesso Rapido</string>
    <string name="add_task">+</string>
    <string name="nome_attivit">nome attività</string>
    <string name="save">Salva</string>
    <string name="time">00:00</string>
    <string name="tempo_totale">Tempo Totale</string>
    <string name="aggiungi_task">Aggiungi Task</string>
    <string name="activity_name">Nome dell\'attività</string>
    <string name="add_activity">+</string>
    <string name="insert">Insert</string>
    <string name="read">Read</string>
    <string name="timeB">Time</string>
    <string name="name">Nome</string>
    <string name="modify">Modifica</string>
    <string name="placehoder"></string>
    <string name="delete">Elimina</string>
    <string name="TaskName">Nome del task</string>
    <string name="end_task">Terminato!</string>
    <string name="start">Inizia</string>
    <string name="TotalScore">points</string>
    <string name="modifica_i_tuoi_dati">Modifica i tuoi dati</string>
    <string name="example_email">example@email.com</string>
    <string name="username">Username</string>
    <string name="logout">Log Out</string>
    <string name="statistiche">Statistiche</string>
    <string name="sezione_in_fase_di_sviluppo">Sezione in fase di sviluppo</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="new_password">Nuova Password</string>
    <string name="PastelTheme">pastello</string>
    <string name="VividTheme">acceso</string>
    <string name="EarthTheme">terra</string>
    <string name="BWTheme">neutro</string>
    <string name="notifications">notifiche</string>
    <string name="change_background">Scegli Sfondo</string>
    <string name="notifications_sound">Suono di notifica</string>
    <string name="change_ringtone">Suoneria</string>
    <string name="focus_mode_description">focus mode description</string>
    <string name="default_homepage_with_the_clock_or_alternative_homepage_where_you_can_start_the_activities">Default homepage with the clock or Alternative homepage where you can start the activities</string>
    <string name="default_homepage">Default homepage</string>
    <string name="alternative_homepage">Homepage Alternativa</string>
    <string name="aspetto">Aspetto</string>
    <string name="background_notifications">notifiche in background</string>
    <string name="enable_focus_mode">suoni in app</string>
    <string name="enable_gamification">gamification</string>
    <string name="notifiche">Notifiche</string>
    <string name="volume_e_suoni">Volume e Suoni</string>
    <string name="connect_your_app_with_google_to_sync_preferences_across_devices">Connetti la tua app a Google per sincronizzare le tue preferenze tra i tuoi dispositivi</string>
    <string name="connect_with_google">Connettiti a Google</string>
    <string name="dismiss">Annulla</string>
    <string name="tipo_di_gamification">Tipo di gamification</string>
    <string name="bonus_malus">Bonus/Malus</string>
    <string name="solo_bonus">Solo bonus</string>
    <string name="icone_bonus_malus">Icone bonus/malus</string>
    <string name="punteggi">Punteggi</string>
    <string name="largo_anticipo">Largo Anticipo</string>
    <string name="LA_descrizione">Attività completata in meno del 70% del tempo a disposizione</string>
    <string name="Anticipo">Anticipo</string>
    <string name="A_descrizione">Attività completata in meno del 90% del tempo a disposizione</string>
    <string name="OnTime">In Orario</string>
    <string name="OT_descrizione">Attività completata usando tra il 90% e il 110% del tempo a disposizione</string>
    <string name="Late">Ritardo</string>
    <string name="L_descrizione">Attività completata in più del 110% del tempo a disposizione</string>
    <string name="SeverelyLate">Severo Ritardo</string>
    <string name="SL_descrizione">Attività completata in più del 150% del tempo a disposizione</string>
    <string name="Extremely_Late">Estremo Ritardo</string>
    <string name="EL_descrizione">Attività completata in più del 200% del tempo a disposizione</string>
    <string name="negativeicon">Negative Icon</string>
    <string name="positive_icon">Positive Icon</string>
    <string name="default_point_value">100</string>
    <string name="enter">invio</string>
    <string name="enter_temporary_code">Inserisci il codice di recupero</string>
    <string name="resend_code_in_2_00">reinvia codice in 2:00</string>
    <string name="__">- - - - - -</string>
    <string name="tasks">Task</string>
    <string name="activities">Attività</string>
    <string name="separatore">|</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="nome_del_task">Nome del Task</string>
    <string name="inserire_il_nome_del_task">inserire il nome del task</string>
    <string name="durata">Durata Prevista</string>
    <string name="sec">sec</string>
    <string name="minuti">min</string>
    <string name="ore">ore</string>
    <string name="gamification">Gamification</string>
    <string name="customize_app">Impostazioni App</string>
    <string name="addActivityBtn">"+Attività"</string>
    <string name="newTaskLabel">Nuovo Task</string>
    <string name="newActivityLabel">Nuova activity</string>
    <string name="start_activity">Programma Attività</string>
    <string name="planSwitchText">PLAN</string>
    <string name="pickDateButton">Scegli una data</string>
    <string name="pickTimeButton">Scegli l\' orario</string>
    <string name="dailyFrequencyOption">Quotidiana</string>
    <string name="scheduleBtn">PROGRAMMA</string>
    <string name="addPlanButton">add plan</string>
    <string name="statusTW"></string>
    <string name="addTaskBtn">+Task</string>
    <string name="weeklyFrequencyOption">Settimanale</string>
    <string name="terminateTaskAlertMsg">Hai completato thistask ?</string>
    <string name="terminateTaskAlertTitle">ATTENZIONE</string>
    <string name="AlarmNotificationTitle">BITTIME HA QUALCOSA DA DIRTI</string>
    <string name="readyToStartMsg">" sta per partire, preparati!</string>
    <string name="quickstartMenuEntry">quickStartMenuEntry</string>
    <string name="caregiverLoginEntry">caregiverLoginEntry</string>
    <string name="runningActivityEntry">runningActivityEntry</string>
    <string name="tasksSettEntry">tasksSettEntry</string>
    <string name="activitiesSettEntry">activitiesSettEntry</string>
    <string name="settActBackStackBase">settActBackStackBase"</string>
    <string name="genericErrorTitle">OPS! Qualcosa è andato storto</string>
    <string name="genericErrorMsg">Questo è un messaggio generale di errore</string>
    <string name="emptyNameActErrorTitle">L\'activity che si sta creando non ha un nome!</string>
    <string name="emptyNameActErrorMsg">Quando si crea un activity è necessario dargli un nome, sarà più facile trovarla in seguito</string>
    <string name="emptyNameTaskErrorTitle">Il task che si sta creando non ha un nome</string>
    <string name="emptyNameTaskErrorMsg">Quando si crea un task è necessario dargli un nome, sarà più facile trovarlo in seguito</string>
    <string name="planningNotFilledErrorTitle">Data o orario mancanti</string>
    <string name="planningNotFilledErrorMsg">Quando si pianifica un\'activity bisogna specificare sia la data che l\'orario in cui si vuole ricevere la notifica</string>
</resources>