<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleLabel"
        style="@style/RegularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editNameLabel"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="nomeAttività"
        android:ems="10"
        android:hint="@string/nome_attivit"
        android:inputType="text" />

    <TextView
        android:id="@+id/ActCreWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placehoder"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aggiungi_task" />

        <Button
            android:id="@+id/addTaskButton"
            style="@style/ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_task" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView7"
        style="@style/RegularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tempo_totale"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalTimeLabel"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/planningFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/fineButton"
        style="@style/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/save" />
</LinearLayout>