<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_name"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        style="@style/RegularText"/>

    <EditText
        android:id="@+id/editNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_attivit"
        android:inputType="text"
        style="@style/TextInputStyle"
        android:autofillHints="nomeAttività"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aggiungi_task"
            style="@style/RegularText"/>

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_task"
            style="@style/ActionButton"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempo_totale"
        android:textAlignment="center"
        style="@style/RegularText"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/totalTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center"
        style="@style/NormalText"/>

    <Button
        android:id="@+id/fineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/SubmitButton"
        android:layout_marginTop="25dp"/>
</LinearLayout>