<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newNameLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="50sp">

    <TextView
        android:id="@+id/textView5"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_del_task"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTaskNameLabel"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/inserire_il_nome_del_task"
        android:inputType="text" />

    <TextView
        android:id="@+id/TaskCreWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/timeLabel"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        tools:text="@string/durata" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextMinutes"
            style="@style/TextInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:autofillHints="time"
            android:ems="10"
            android:hint="@string/minuti"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextSeconds"
            style="@style/TextInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:autofillHints="time"
            android:ems="10"
            android:hint="@string/sec"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        style="@style/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/save" />
</LinearLayout>