<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/modificaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifica_i_tuoi_dati"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TitleText"/>


    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificaTitle"
        style="@style/TextInputStyle"/>

    <RelativeLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText">

        <EditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_toStartOf="@+id/showHidePassword"
            style="@style/TextInputStyle"/>

        <ImageView
            android:id="@+id/showHidePassword"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/closed_eye"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/togglevisibility"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/usernameEditText"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:layout_constraintBottom_toTopOf="@+id/pinEditText"
        style="@style/TextInputStyle"/>

    <EditText
        android:id="@+id/pinEditText"
        android:hint="@string/pin_input_hint_text"
        android:inputType="numberPassword"
        android:autofillHints="PIN"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInputStyle"/>

    <Button
        android:id="@+id/submit"
        android:text="@string/save"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinEditText"
        style="@style/SubmitButton"/>

    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/statisticheTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        style="@style/RedActionButton"/>

    <TextView
        android:id="@+id/statisticheTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistiche"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintBottom_toTopOf="@+id/developmentSection"/>

    <!-- Gray rectangle for development message -->
    <LinearLayout
        android:id="@+id/developmentSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticheTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sezione_in_fase_di_sviluppo"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
