<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Text view at the top -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        style="@style/TitleText" />

    <!-- Email input field -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        style="@style/TextInputStyle"
        android:autofillHints="emailAddress" />

    <!-- Password input field -->
    <RelativeLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText">

        <EditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/showHidePassword"
            style="@style/TextInputStyle"
            android:autofillHints="password" />

        <ImageView
            android:id="@+id/showHidePassword"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/closed_eye"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/togglevisibility" />

    </RelativeLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        style="@style/SubmitButton"/>

    <!-- Text view for "Forgot Password?" -->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        style="@style/SmallText" />

    <!-- Alternative login button (e.g., for social login)
    <Button
        android:id="@+id/Glogin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Alternative Login" />
    -->
    <!-- Final text view at the bottom -->
    <TextView
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:text="@string/switch_mode"
        style="@style/SmallText" />

</LinearLayout>